make it responsive

--- a/controls/css/style.css
+++ b/controls/css/style.css
@@ -107,7 +107,9 @@ nav.primary ul li a.current {
     display: block;
 }
 .main {
-    width: 400px;
+    width: 100%;
+    min-width: 250px;
+    max-width: 600px;
     margin: 0 auto;
 }
 .row {
@@ -227,9 +229,9 @@ legend {
 .autopan {
     background: no-repeat url(../images/preset-button-autopan.png);
     display: inline-block;
+    min-width: 112px;
     width: 100%;
     height: 40px;
-    float: left;
     margin: 10px 0 0;
     padding: 0;
 }
@@ -326,8 +328,7 @@ legend {
     position: relative;
 }
 .pantilt_controls {
-    float: right;
-    display: block;
+    display: inline-block;
     padding: 0;
 }
 .rocker {
